# AI-Medicare-Advice-Evaluation

./: .env.example  .gitignore  ADAPTERS_COMPLETE.md  AGENTS_COMPLETE.md  AI-Medicare-Advice-Evaluator-PRD.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  GETTING_STARTED.md  GRADING_SYSTEM_README.md  GRADING_TEST_PLAN.md  IMPLEMENTATION_STATUS.md  INTEGRATED_GRADING_GUIDE.md  JSON_PARSING_FIX.md  METHODOLOGY_COMPARISON.md  OPENROUTER_GUIDE.md  ORCHESTRATOR_COMPLETE.md  PLAN_INFORMATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPORTING_GUIDE.md  SCENARIOS.md  SHIP_RUBRIC_UPDATE.md  USER_GUIDE.md  VIEW_RUNS_GUIDE.md  compare_models.sh  index.html  pyproject.toml  test_basic.py
.github/workflows/: deploy-reports.yml
.specify/memory/: constitution.md
examples/: run_with_grading.py
notes/: README.md  decisions.md  inbox.md
notes/feature-ideas/: _TEMPLATE.md  models_for_production_reporting.md
prompts/: adjudicator_system.txt  extractor_system.txt  questioner_system.txt  scorer_system.txt  verifier_system.txt
reference_material/: etable3_question_mapping.json
reports/: etable3_report.html  index.html  interactive_test.html  matrix_report.html  ship-002.html
scenarios/: README.md
scripts/: etable3_report_template.html  generate_accuracy_table.py  generate_etable3_report.py  generate_matrix_report.py  generate_web_report.py  report_constants.py  report_utils.py  web_report_template.html
src/: __init__.py  __main__.py  grader.py  grading_rubric.py  orchestrator.py  schemas.py  storage.py  test_grading.py  utils.py  view_run.py
tests/: test_agents.py
(+50 files in other folders)
